[package]
name = "thread-count"
version = "0.1.0"
authors = ["Paulo Prescendo <paulovinicius1994@hotmail.com>"]
license = "MIT"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "thread_count"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.3.1"

[dependencies]
neon = "0.3.1"
num_cpus = "1.4.0"
